--- a/reg.html
+++ b/reg.html
@@ -9,40 +9,21 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Register</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">logout</a>
-        </li>
-      </ul>
+      
       <span class="navbar-text">
-        Welcome
       </span>
     </div>
   </div>
 </nav>
 
 <form action="reg.php" method="post">
-  <div class="imgcontainer">
-    <img src="img_avatar2.png" alt="Avatar" class="avatar">
-  </div>
-
-
-
-
-
+ 
 <div class="container mt-6">
-<h3> Register here </h3>
+<h3> Welcome Register here </h3>
 <form>
  <div class="form-row">
     <div class="form-group col-md-6">
@@ -55,11 +36,11 @@
       <input type="text" class="form-control" name="txtFatherName">
     </div>
 
-<div class="form-group">
+<div class="form-group col-md-6">
     <label for="inputAddress">Address</label>
     <input type="text" class="form-control" name="txtAddress">
   </div>
-<div class="form-group col-md-4">
+<div class="form-group col-md-6">
       <label for="inputState">State</label>
       <input type="text" name="txtState" class="form-control">
      
@@ -85,8 +66,9 @@
     <div class="form-group col-md-6">
       <label for="inputPassword4">Password</label>
       <input type="password" class="form-control" name="txtPassword">
-    </div>
-  </div>  
+
+   </div>
+   
 
   <button type="submit" class="btn btn-primary">Register</button>
 </form>
